[gd_scene load_steps=24 format=3 uid="uid://7317onwotbjr"]

[ext_resource type="Texture2D" uid="uid://de8hiv6uh5pdp" path="res://dynamic/2_enemy/flying_monster/PNG/Flying Monster - 01/PNG Sequences/Idle/Idle_000.png" id="1_4r8jy"]
[ext_resource type="Script" path="res://dynamic/2_enemy/flying_monster/flying_monster_1.gd" id="1_8pgmr"]
[ext_resource type="Texture2D" uid="uid://ctkycb2tmlw8o" path="res://dynamic/2_enemy/flying_monster/PNG/Flying Monster - 01/PNG Sequences/Idle/Idle_001.png" id="2_j2bol"]
[ext_resource type="Texture2D" uid="uid://der61ovnhp06m" path="res://dynamic/2_enemy/flying_monster/PNG/Flying Monster - 01/PNG Sequences/Idle/Idle_002.png" id="3_1nbth"]
[ext_resource type="Texture2D" uid="uid://b1aq3osbu1ovh" path="res://dynamic/2_enemy/flying_monster/PNG/Flying Monster - 01/PNG Sequences/Idle/Idle_003.png" id="4_ec70g"]
[ext_resource type="Texture2D" uid="uid://cuwtccymosu0x" path="res://dynamic/2_enemy/flying_monster/PNG/Flying Monster - 01/PNG Sequences/Idle/Idle_004.png" id="5_0p4rg"]
[ext_resource type="Texture2D" uid="uid://bof6bkjtb8obl" path="res://dynamic/2_enemy/flying_monster/PNG/Flying Monster - 01/PNG Sequences/Idle/Idle_005.png" id="6_0swok"]
[ext_resource type="Texture2D" uid="uid://biv5akugmia2y" path="res://dynamic/2_enemy/flying_monster/PNG/Flying Monster - 01/PNG Sequences/Idle/Idle_006.png" id="7_eqbxk"]
[ext_resource type="Texture2D" uid="uid://bqi580gqiej31" path="res://dynamic/2_enemy/flying_monster/PNG/Flying Monster - 01/PNG Sequences/Idle/Idle_007.png" id="8_ost4q"]
[ext_resource type="Texture2D" uid="uid://b2ce6wmfx4fin" path="res://dynamic/2_enemy/flying_monster/PNG/Flying Monster - 01/PNG Sequences/Idle/Idle_008.png" id="9_fyw1b"]
[ext_resource type="Texture2D" uid="uid://cr5x2175vabid" path="res://dynamic/2_enemy/flying_monster/PNG/Flying Monster - 01/PNG Sequences/Idle/Idle_009.png" id="10_sc1ab"]
[ext_resource type="Texture2D" uid="uid://0lmnf4slebme" path="res://dynamic/2_enemy/flying_monster/PNG/Flying Monster - 01/PNG Sequences/Idle/Idle_010.png" id="11_1c8a3"]
[ext_resource type="Texture2D" uid="uid://cri7yi1x5wlot" path="res://dynamic/2_enemy/flying_monster/PNG/Flying Monster - 01/PNG Sequences/Idle/Idle_011.png" id="12_4w7hb"]
[ext_resource type="Texture2D" uid="uid://dnwf2rwnkxedh" path="res://dynamic/2_enemy/flying_monster/PNG/Flying Monster - 01/PNG Sequences/Idle/Idle_012.png" id="13_m7aj6"]
[ext_resource type="Texture2D" uid="uid://besu0f3el2ym0" path="res://dynamic/2_enemy/flying_monster/PNG/Flying Monster - 01/PNG Sequences/Idle/Idle_013.png" id="14_yflsf"]
[ext_resource type="Texture2D" uid="uid://b3puqdn8cyt3h" path="res://dynamic/2_enemy/flying_monster/PNG/Flying Monster - 01/PNG Sequences/Idle/Idle_014.png" id="15_2e3cu"]
[ext_resource type="Texture2D" uid="uid://cmb82nlvx33fh" path="res://dynamic/2_enemy/flying_monster/PNG/Flying Monster - 01/PNG Sequences/Idle/Idle_015.png" id="16_pxbrl"]
[ext_resource type="Texture2D" uid="uid://bgg7tjxle026m" path="res://dynamic/2_enemy/flying_monster/PNG/Flying Monster - 01/PNG Sequences/Idle/Idle_016.png" id="17_s6keh"]
[ext_resource type="Texture2D" uid="uid://lyohuw1f1ee3" path="res://dynamic/2_enemy/flying_monster/PNG/Flying Monster - 01/PNG Sequences/Idle/Idle_017.png" id="18_eb1pg"]
[ext_resource type="PackedScene" uid="uid://dbrnapriu7vw3" path="res://dynamic/6_utillity/interaction_sensor/interaction_sensor.tscn" id="19_52md7"]

[sub_resource type="SpriteFrames" id="SpriteFrames_swig4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_4r8jy")
}, {
"duration": 1.0,
"texture": ExtResource("2_j2bol")
}, {
"duration": 1.0,
"texture": ExtResource("3_1nbth")
}, {
"duration": 1.0,
"texture": ExtResource("4_ec70g")
}, {
"duration": 1.0,
"texture": ExtResource("5_0p4rg")
}, {
"duration": 1.0,
"texture": ExtResource("6_0swok")
}, {
"duration": 1.0,
"texture": ExtResource("7_eqbxk")
}, {
"duration": 1.0,
"texture": ExtResource("8_ost4q")
}, {
"duration": 1.0,
"texture": ExtResource("9_fyw1b")
}, {
"duration": 1.0,
"texture": ExtResource("10_sc1ab")
}, {
"duration": 1.0,
"texture": ExtResource("11_1c8a3")
}, {
"duration": 1.0,
"texture": ExtResource("12_4w7hb")
}, {
"duration": 1.0,
"texture": ExtResource("13_m7aj6")
}, {
"duration": 1.0,
"texture": ExtResource("14_yflsf")
}, {
"duration": 1.0,
"texture": ExtResource("15_2e3cu")
}, {
"duration": 1.0,
"texture": ExtResource("16_pxbrl")
}, {
"duration": 1.0,
"texture": ExtResource("17_s6keh")
}, {
"duration": 1.0,
"texture": ExtResource("18_eb1pg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_036gx"]
radius = 110.164

[sub_resource type="CircleShape2D" id="CircleShape2D_qo0nh"]
radius = 129.004

[node name="FlyingMonster1" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 7
motion_mode = 1
script = ExtResource("1_8pgmr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_swig4")
speed_scale = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(54, 19)
shape = SubResource("CircleShape2D_036gx")

[node name="interaction_sensor" parent="." instance=ExtResource("19_52md7")]
collision_layer = 5
collision_mask = 10

[node name="CollisionShape2D" parent="interaction_sensor" index="0"]
position = Vector2(55, 19)
shape = SubResource("CircleShape2D_qo0nh")

[connection signal="area_entered" from="interaction_sensor" to="." method="_on_interaction_sensor_area_entered"]
[connection signal="body_entered" from="interaction_sensor" to="." method="_on_interaction_sensor_body_entered"]
[connection signal="body_exited" from="interaction_sensor" to="." method="_on_interaction_sensor_body_exited"]

[editable path="interaction_sensor"]
